# agjax

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build-ci.yml  pages.yml  release.yml  test_code.yml  test_code_conda.yml
agjax/: __init__.py  utils.py  wrapper.py  wrapper_test.py
agjax/experimental/: wrapper.py
docs/: _config.yml  _toc.yml  api.rst  basic_example.ipynb  changelog.md  photonic_inverse_design.ipynb  tutorial.md
notebooks/: basic_example.ipynb  photonic_inverse_design.ipynb
src/agjax/: __init__.py  utils.py  wrapper.py
src/agjax/experimental/: __init__.py  wrapper.py
tests/: test_utils.py  test_wrapper.py
tests/experimental/: test_wrapper.py
