[project]

name = "agjax"
version = "v0.3.1"
description = "A jax wrapper for autograd-differentiable functions."
keywords = ["autograd", "jax", "python", "wrapper", "gradient"]
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}

authors = [
    {name = "Martin F. Schubert", email = "mfschubert@gmail.com"},
]
maintainers = [
    {name = "Martin F. Schubert", email = "mfschubert@gmail.com"},
]

dependencies = [
    "autograd",
    "jax",
    "jaxlib",
    "numpy",
]

[project.optional-dependencies]
tests = [
    "parameterized",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
docs = [
    "matplotlib",
    "jupyter-book==1.0.0",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "ceviche_challenges",
]
dev = [
    "agjax[tests, docs]",
    "bump-my-version",
    "darglint",
    "mypy",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"agjax" = ["py.typed"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]  # Allow tests with same name in different dirs.
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
follow_imports = "normal"

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.pydocstyle]
inherit = false
convention = "google"
